plugins/kotlin/idea/tests/testData/multiModuleHighlighting/multiplatform/basic/common/common.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT]">My</error> {

}

expect class Their {

}
